Moved configuration back into the top-level Makefile.  In particular, xdvi, dvips and MakeTeXPK are automatically configured again. Resurrected mftopk, because it is the easy way to build font metrics, though dvips and xdvi still use MakeTeXPK on-the-fly as per Nate's changes. Made Gunther's dvidr driver a little more friendly for US users. Updated the install notes.

--- a/print/tex/Makefile.epson
+++ b/print/tex/Makefile.epson
@@ -26,7 +26,7 @@ INSTALL=install -c -o bin -g bin
 
 ### For METAFONT/modes.mf/mftopk: which is the default device? There
 ### are a lot, see ./scripts/modes.mf.raw for what you have.
-DEFDEV=CanonCX
+DEFDEV=EpsonLQFiveZeroZeroLo
 
 ### still for METAFONT: default window geometry for online graphics
 ### output. (Normally needs not to be changed)
@@ -37,7 +37,7 @@ MFSCRROW=600
 ### given in dpi
 ### Note: Since we are using the default Postscript convertions, 300 DPI
 ### is the standard laser printer resolution that MetaFont can create
-DEFRES=300
+DEFRES=180
 
 ### For DVIPS and XDVI: The "last resort" fontsizes, if no better PK,
 ### GF or PXL font was found, try these sizes. This isn't really
@@ -46,7 +46,7 @@ DEFRES=300
 ###
 ### resolution*(1.2**n) ; n: 1..5
 ###
-RESRES=300:360:432:518:622:746
+RESRES=180:216:252:288:342:396
 
 ### For XDVI: the default aspect ratio, given in vertical resolution
 ### devided by horizontal resolution and multiplied with 1000. (eg.
@@ -291,8 +291,7 @@ stamp-expand: Makefile
 	sed -f ./var.sed ./site.h.raw > ../$(TeX)/site.h ; \
 	sed -f ./var.sed ./dvidr.raw > ./dvidr ; \
 	sed -f ./var.sed ./dvidr.1.raw > ./dvidr.1 ; \
-	sed -f ./var.sed ./config.ps.raw | \
-		sed '/^R/s/:/ /g' > ../$(Dvips)/config.ps ; \
+	sed -f ./var.sed ./config.ps.raw > ../$(Dvips)/config.ps ; \
 	sed -f ./var.sed ./MakeTeXPK.raw > ../$(Dvips)/MakeTeXPK ; \
 	sed -f ./var.sed ./mftopk.raw > ../$(Dvips)/mftopk ; \
 	sed -f ./var.sed ./mftopk.1.raw > ../$(Dvips)/mftopk.1 ; \
@@ -339,9 +338,6 @@ Dvips:
 
 Xdvi: 
 	cd $(Xdvi) ;\
-	if [ -x /usr/X386/bin/xmkmf ]; then \
-		xmkmf ;\
-	fi; \
 	make $(makedef) all
 
 dvidrv: stamp-port
