--- a/x11/urt/lib/makefile.src
+++ b/x11/urt/lib/makefile.src
@@ -26,10 +26,16 @@ OBJS = Runput.o buildmap.o cmd_name.o colorquant.o dither.o \
 	vaxshort.o \
 	$(OPT_OBJS)
 
+SOBJS= ${OBJS:.o=.so}
+
+.SUFFIXES: .so
+.c.so:
+	${CC} -fpic ${PICFLAG} -DPIC ${CFLAGS} -c $< -o $@
+
 LIBNAME = librle.a
 
 # Just rebuild the object files.
-objs: $(OBJS)
+objs: $(OBJS) ${SOBJS}
 
 # Copy the library to the destination directory.
 # (Install a second copy on the debug subdirectory, on the theory that it
@@ -37,8 +43,11 @@ objs: $(OBJS)
 # Do nothing if $(DEST) is empty (or not defined)
 install: buildlib
 	@sh -c "if test '$(DEST)x' != x ; then \
+		echo cp librle.so.3.0 $(DEST)/librle.so.3.0 ; \
+		cp librle.so.3.0 $(DEST)/librle.so.3.0 ; \
 		echo cp $(LIBNAME) $(DEST)/$(LIBNAME) ; \
 		cp $(LIBNAME) $(DEST)/$(LIBNAME) ; \
+		cp librle.so.3.0 $(DEST)/librle.so.3.0 ; \
 		if test x$(RANLIB) != x ; then \
 			echo ranlib $(DEST)/$(LIBNAME) ; \
 			ranlib $(DEST)/$(LIBNAME) ; \
@@ -47,6 +56,7 @@ install: buildlib
 		fi ; \
 		if test -d $(DEST)/debug ; then \
 			echo cp $(LIBNAME) $(DEST)/debug/$(LIBNAME) ; \
+			cp librle.so.3.0 $(DEST)/librle.so.3.0 ; \
 			if test x$(RANLIB) != x ; then \
 				cp $(LIBNAME) $(DEST)/debug/$(LIBNAME) ; \
 				echo ranlib $(DEST)/debug/$(LIBNAME) ; \
@@ -63,13 +73,14 @@ install: buildlib
 	touch install
 
 # Rebuild the library from all the .o files.
-buildlib: $(OBJS)
+buildlib: $(OBJS) $(SOBJS)
 	-rm -f $(LIBNAME)
 #ifdef WHY
 	ar rc $(LIBNAME)
 	ar q $(LIBNAME) $(OBJS)
 #else
 	ar cTq $(LIBNAME) `lorder ${OBJS} | tsort`
+	ld -Bshareable -o librle.so.3.0 ${SOBJS}
 #ifndef NO_RANLIB
 	ranlib $(LIBNAME)
 #endif
