--- a/x11/urt/makefile.src
+++ b/x11/urt/makefile.src
@@ -14,6 +14,11 @@ ALLDIRS = include $(DIRS) man
 
 all: default
 
+# Package target for FreeBSD
+
+pkg:	default install
+	pkg_create -v -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST urt_bin
+
 # clean deletes all but source, pristine (below) deletes installed stuff, too
 default clean: doit
 	@for d in $(DIRS) ; do \
