Don't try to do clean in xview unless we have run config. Config generates a stamp files used for this purpose. Made a more conformant pkg target. Ignored the plea for useful all target, World is good enough.

--- a/x11/xview/Makefile
+++ b/x11/xview/Makefile
@@ -8,6 +8,7 @@ config:
 	(cd xview; xmkmf)
 	(cd xview; $(MAKE) Makefiles)
 	(cd xview; $(MAKE) SUBDIRS=clients Makefiles)
+	touch stamp-config
 
 World:	config
 	@echo Making xview3.2 and clients
@@ -18,17 +19,15 @@ World:	config
 	@echo Make and Installation of xview is complete!
 	@echo Don't forget to set OPENWINHOME in your ~/.tcshrc or equiv.
 
-xview32b.tgz: 
-	pkg_create -c xview-bin-desc -d README -f xview-bin-list xview32b
+pkg:	World pkg/+ONELINE pkg/+DESC pkg/+PLIST
+	pkg_create -c pkg/+ONELINE  -d pkg/+DESC -f pkg/+PLIST xview32_bin
 
-xview32l.tgz:
-	pkg_create -c xview-lib-desc -d README -f xview-lib-list xview32l
-
-pkg:	World xview32b.tgz xview32l.tgz
-
-clean:	config
+clean:
 	rm -f xview32b.tgz xview32l.tgz
-	(cd xview; $(MAKE) clean)
-	(cd xview; $(MAKE) SUBDIRS=clients clean)
+	if [ -f stamp-config ] ; then \
+		(cd xview; $(MAKE) clean) ; \
+		(cd xview; $(MAKE) SUBDIRS=clients clean) ; \
+		rm stamp-config ; \
+	fi ;
 	(cd xview; rm -rf build)
 	(cd xview; mkdir build)
