rename pkg target to package to make Julian S. happy.

--- a/comm/kermit/Makefile
+++ b/comm/kermit/Makefile
@@ -31,7 +31,7 @@ ckcpro.c: wart
 
 CLEANFILES+= ckcpro.c wart
 
-pkg:	pkg_bin
+package:	pkg_bin
 
 pkg_bin: install pkg/+DESC pkg/+ONELINE pkg/+PLIST
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST kermit_bin
