--- a/game/xtrek/Makefile
+++ b/game/xtrek/Makefile
@@ -430,7 +430,7 @@ doc:
 clean::
 	rm -f xttoken.c xtparse.c
 
-pkg: pkg_bin
+package: pkg_bin
 
 pkg_bin: install install.man
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST xtrek_bin
