--- a/net/sup/Makefile
+++ b/net/sup/Makefile
@@ -116,7 +116,7 @@ install:
 	install -c -m 444 -o bin -g bin ${MAN1} ${NETBSD_MAN1}
 	install -c -m 444 -o bin -g bin ${MAN8} ${NETBSD_MAN8}
 
-pkg: install
+package: install
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST sup_bin
 
 netcrypt.c: crypt.diffs
