--- a/util/archivers/Makefile
+++ b/util/archivers/Makefile
@@ -1,7 +1,7 @@
 SUBDIR=lha unarj unzip zip zoo
 
 
-pkg:	pkg_bin
+package:	pkg_bin
 
 pkg_bin: install pkg/+DESC pkg/+ONELINE pkg/+PLIST
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST archivers_bin
