--- a/util/mtools/Makefile
+++ b/util/mtools/Makefile
@@ -175,7 +175,7 @@ shar:
 	Mkmanifest.out Mlabel.out Mmd.out Mrd.out Mread.out Mren.out \
 	Mtools.out Mtype.out Mwrite.out > mtools_sh.4
 
-pkg: pkg_bin
+package: pkg_bin
 
 pkg_bin: install
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST mtools_bin
