--- a/comm/rzsz/Makefile
+++ b/comm/rzsz/Makefile
@@ -37,7 +37,7 @@ install:
 clean:
 	rm -f core* rz sz crc minirb
 
-pkg:    pkg_bin
+package:    pkg_bin
 
 pkg_bin: install pkg/+DESC pkg/+ONELINE pkg/+PLIST
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST rzsz_bin
