--- a/comm/term/Makefile
+++ b/comm/term/Makefile
@@ -70,7 +70,7 @@ installman:
 	done
 
 
-pkg:	pkg_bin
+package:	pkg_bin
 
 pkg_bin: install pkg/+DESC pkg/+ONELINE pkg/+PLIST 
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST term_bin
