--- a/game/golddig/Makefile
+++ b/game/golddig/Makefile
@@ -73,7 +73,7 @@ ${EDITOR}: makelev.o shared.o
 	${CC} ${CFLAGS} -c -DLIB=\"${LIB}\" -DSCOREFONT=\"${SCOREFONT}\" \
                        -DSCORESIZE=${SCORESIZE} $<
 
-pkg: pkg_bin
+package: pkg_bin
 
 pkg_bin: install
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST golddig_bin
