--- a/game/xboing/Makefile
+++ b/game/xboing/Makefile
@@ -432,7 +432,7 @@ backup:
 	@:
 	tar cvf - * | gzip -v > $(BACKUP_DIR)/`date '+xboing%d-%h-%y'`.tgz
 
-pkg: pkg_bin
+package: pkg_bin
 
 pkg_bin: pkg/+DESC pkg/+ONELINE pkg/+PLIST pkg/+REQ all install install.man
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST xboing_bin
