--- a/game/xpilot/Makefile
+++ b/game/xpilot/Makefile
@@ -388,7 +388,7 @@ install::
 .endif
 	cd lib/maps ; $(INSTALL) -c ${MAPS} ${MAPDIR}
 
-pkg: pkg_bin
+package: pkg_bin
 
 pkg_bin: install
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST xpilot_bin
