--- a/net/gopher/Makefile
+++ b/net/gopher/Makefile
@@ -112,7 +112,7 @@ clean:
 	(cd doc; 	$(MAKE) $(MFLAGS) clean)
 	-rm -f "examples/Sample Directory/wais-index/index."*
 
-pkg: install
+package: install
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST gopher_bin
 
 spotless: clean
