--- a/net/zircon/Makefile
+++ b/net/zircon/Makefile
@@ -96,7 +96,7 @@ tar:	tclIndex
 	@gzip -9vf zircon-$(version).tar
 	rm -rf zircon-$(version)
 
-pkg:	pkg_bin
+package:	pkg_bin
 
 pkg_bin: pkg/+DESC pkg/+ONELINE pkg/+PLIST pkg/+REQ all install
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST -r pkg/+REQ zircon_bin
