--- a/print/afm/Makefile
+++ b/print/afm/Makefile
@@ -1,4 +1,4 @@
-#	$Header: /a/cvs/386BSD/ports/print/afm/Makefile,v 1.3 1994/02/01 02:41:21 ljo Exp $
+#	$Header: /a/cvs/386BSD/ports/print/afm/Makefile,v 1.4 1994/04/11 15:02:37 jkh Exp $
 #
 # FlexFAX Facsimile Software
 #
@@ -91,6 +91,6 @@ install: ${AFMFILES}
 	    ${INSTALL} -c -o bin -g bin -m 444 $$i ${AFMDIR}/`basename $$i .afm`; \
 	done
 
-pkg:	install pkg/+DESC pkg/+ONELINE pkg/+PLIST
+package:	install pkg/+DESC pkg/+ONELINE pkg/+PLIST
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST afm_bin
 
