--- a/print/tex/Makefile
+++ b/print/tex/Makefile
@@ -247,7 +247,7 @@ ORIGINAL-FILES= $(TeX)/Makefile $(Dvips)/Makefile $(Dvips)/config.ps \
 	$(TeX)/tex/convert $(TeX)/mf/convert $(TeX)/Install_INPUTS \
 	$(TeX)/site.h 
 
-pkg: pkg_bin
+package: pkg_bin
 
 pkg_bin:
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST tex_bin
