--- a/util/ile/Makefile
+++ b/util/ile/Makefile
@@ -5,7 +5,7 @@ LDADD+=	-ltermcap
 BINDIR?=	/usr/local/bin
 MANDIR=	/usr/local/man/man
 
-pkg: pkg_bin
+package: pkg_bin
 
 pkg_bin: install
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST ile_bin
