--- a/util/iozone/Makefile
+++ b/util/iozone/Makefile
@@ -1,4 +1,4 @@
-#	$Id: Makefile,v 1.3 1994/02/17 17:22:51 rgrimes Exp $
+#	$Id: Makefile,v 1.4 1994/04/11 15:03:32 jkh Exp $
 
 PROG=	iozone
 #SRCS=	iozone.c
@@ -6,7 +6,7 @@ NOMAN=	YES
 BINDIR?= /usr/local/bin
 CFLAGS+= -DUSE_FSYNC
 
-pkg: pkg_bin
+package: pkg_bin
 
 pkg_bin: install
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST iozone_bin
