--- a/util/syscons_xtra/Makefile
+++ b/util/syscons_xtra/Makefile
@@ -3,7 +3,7 @@ SUBDIR = utils dgl
 obj:
 	@echo -n
 
-pkg: pkg_bin
+package: pkg_bin
 
 pkg_bin: install
         pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST syscons_xtra_bin
