--- a/util/unshar/Makefile
+++ b/util/unshar/Makefile
@@ -57,7 +57,7 @@ clean:
 	rm -f *.[oa] *.$1 *.BAK $(PROGRAMS)
 	rm -f lint lib.ln tags core foo a.out Part?? all install
 
-pkg: pkg_bin
+package: pkg_bin
 
 pkg_bin: install
         pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST unshar_bin
