--- a/x11/jpeg/Makefile
+++ b/x11/jpeg/Makefile
@@ -130,7 +130,7 @@ install: all
 
 
 
-pkg:	pkg_src
+package:	pkg_src
 
 pkg_bin: install pkg/+DESC pkg/+ONELINE pkg/+PLIST
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST jpeg_bin
