--- a/x11/xcdplayer/Makefile
+++ b/x11/xcdplayer/Makefile
@@ -373,7 +373,7 @@ Makefiles::
 
 includes::
 
-pkg:    pkg_bin
+package:    pkg_bin
 
 pkg_bin: install pkg/+DESC pkg/+ONELINE pkg/+PLIST
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST xcdplayer_bin
