--- a/x11/xlock/Makefile
+++ b/x11/xlock/Makefile
@@ -322,7 +322,7 @@ install:: xlock
 	else (set -x; $(MKDIRHIER) $(DESTDIR)$(BINDIR)); fi
 	$(INSTALL) -c $(INSTPGMFLAGS) $(INSTUIDFLAGS) xlock $(DESTDIR)$(BINDIR)
 
-pkg:	pkg_bin
+package:	pkg_bin
 
 pkg_bin: install pkg/+DESC pkg/+ONELINE pkg/+PLIST
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST xlock_bin
