--- a/x11/urt/makefile.src
+++ b/x11/urt/makefile.src
@@ -16,7 +16,7 @@ all: default
 
 # Package target for FreeBSD
 
-pkg:	default install
+package:	default install
 	pkg_create -v -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST urt_bin
 
 # clean deletes all but source, pristine (below) deletes installed stuff, too
