Incorporated README.FreeBSD, VERSION and pkg/* from Scott Mace's earlier port with slight additions. Fixed bug which made ksh dump core when stdin was a pipe. Fixed cd bug:  ksh would previously dump core if getcwd failed.

--- a/shell/ksh/Makefile
+++ b/shell/ksh/Makefile
@@ -1,9 +1,9 @@
 # PD Bourne/Korn Shell
-# $Id: Makefile,v 1.1 1994/04/16 21:38:42 sean Exp $
+# $Id: Makefile,v 1.2 1994/04/17 00:57:54 sean Exp $
 
 SHELL = /bin/sh
 MAKE  = make
-CC=gcc -pipe -g -O
+CC=gcc -O
 LN=ln -s
 #LN=ln
 #CONFIG= -D_SYSV
@@ -16,6 +16,8 @@ CONFIG= -D_BSD -D_POSIX_TERM		# 386bsd
 MANPAGES = ksh.1
 #MANDIR=/usr/catman/u_man/man1
 #MANDIR=/usr/man/man1
+DESTDIR=/usr/local
+MANDESTDIR=$(DESTDIR)/man
 
 #INSTALL=bsdinstall
 INSTALL=install
@@ -28,7 +30,7 @@ ksh:	libs
 libs:
 	( cd std ; $(MAKE) 'CC=$(CC)' 'CONFIG=$(CONFIG)' 'LN=$(LN)' libs )
 
-install: sh/ksh
+install: sh/ksh inst-man inst-etc
 	( cd sh ; $(INSTALL) -s ksh $(DESTDIR)/bin )
 
 sh/ksh:	ksh
@@ -36,8 +38,17 @@ sh/ksh:	ksh
 inst-man: $(MANPAGES)
 	$(INSTALL) -c -m 444 $(MANPAGES) $(MANDESTDIR)/man1
 
+inst-etc:
+	$(INSTALL) -c -m 444 etc/ksh.kshrc /etc
+
 clean clobber:
 	( cd std ; $(MAKE) $@ )
 	( cd sh ; $(MAKE) $@ )
 	-rm -f *.out
 
+
+
+package:	pkg_bin
+
+pkg_bin: install pkg/+DESC pkg/+ONELINE pkg/+PLIST
+	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST ksh_bin
